# webstrike_buisness

./: .gitignore  README.md  db.py  main.py  ph.py  pyproject.toml  router.py  schema.sql
api_doc/: bruno.json
api_doc/auth/: Login.bru
auth/: model.py  route.py  service.py
blog/: route.py  service.py
shared/: db.py  dependency.py
